# codeSpaceGit

./: README  firCPP  firCPP.cpp
amusecode/: README
amusecode/shell/: runCode.sh
amusementForHelp/c_c++/.metadata/: version.ini
amusementForHelp/cmake/: CMakeCache.txt  CMakeLists.txt  vtkfir.cpp
amusementForHelp/java/: helloworld.java
amusementForHelp/java/delaunay-mesh/: .project
amusementForHelp/parallelProgramming/MPI/: mpiRun.sh  pi.cpp  testLock.cpp  testMPI.cpp  testMpiGroup.c  testMpiMesh.cpp
amusementForHelp/parallelProgramming/openMP/: openMPRun.sh  piC  piC.cpp  readwht.py  res.txt  testOpenMP.cpp  testOpenMP2.cpp
amusementForHelp/python/: constantWht.py  dsWht.py  genRandomPoint.py  helpMarkdownWht.py  judgeWht.py  judgeWht.py.bak  plotWht2D.py  readWriteFileWht.py  res.txt  test.py  typeChange.py
amusementForHelp/sql/: mySqlLoad.sh
lab/: README
lab/handleCode/delaunay/2D/delaunayMG/data/: square.ply
leetcode/: 32  44.cpp  copy  res.txt  run.sh  test.py
leetcode/finish/: 1005.py  1034.py  10_1.cpp  10_2.cpp  10_3.cpp  11.cpp  1104.py  1128.py  1160.py  1161.py  1171.py  1175.py  12.cpp  1218_1.py  13.cpp  1379.cpp  14.cpp  1442_1.py  1446.py  1471.py  15.cpp  1542.py  1542_2.py  1542_3.py  16.20.T9.py  16.cpp  1614.cpp  1624.cpp  1629.cpp  1636.cpp  1640.cpp  1646.cpp  1652.cpp  1668.cpp  1678.cpp  1684.cpp  1694.cpp  17.cpp  1700.cpp  1704.cpp  (+123 more)
leetcode/unfinish/: 22.cpp  32.cpp  330.py  36.cpp  37.cpp  39.cpp  47.cpp  488.py  49.cpp  51.cpp  736.py
nc/: wc138  wc138.cpp
note/: README
pic/: README
shell/: runCpp.sh
(+37 files in other folders)
